--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,32 +1,32 @@
- name: 🚀 Deploying to ghost-spirit.com 🚀
-      on:
-        push:
-          branches:
-            - production
-      jobs:
-        web-deploy:
-          name: 🎉 FTP-Deploy-Action
-          runs-on: ubuntu-latest
-          steps:
-            - name: 🚚 Get latest code
-              uses: actions/checkout@v3
-      
-            - name: Use Node.js 16
-              uses: actions/setup-node@v2
-              with:
-                node-version: '16'
-           
-            - name: 🔨 Build Project
-              run: |
-                  npm install
-                  npm run build
-      
-            - name: FTP Deploy to WP Engine (Staging)
-              uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-              with:
-                server: ${{ secrets.FTP_SERVER }}
-                username: ${{ secrets.FTP_USERNAME}}
-                password: ${{ secrets.FTP_PASSWORD }}
-      
-            - name: 🥤 Installing Vendor Packages
-              run: composer update --no-dev --no-scripts --optimize-autoloader
+name: 🚀 Deploying to ghost-spirit.com 🚀
+on:
+  push:
+    branches:
+      - production
+jobs:
+  web-deploy:
+    name: 🎉 FTP-Deploy-Action
+    runs-on: ubuntu-latest
+    steps:
+      - name: 🚚 Get latest code
+        uses: actions/checkout@v3
+
+      - name: Use Node.js 16
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+     
+      - name: 🔨 Build Project
+        run: |
+            npm install
+            npm run build
+
+      - name: FTP Deploy to WP Engine (Staging)
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+        with:
+          server: ${{ vars.FTP_SERVER }}
+          username: ${{ vars.FTP_USERNAME}}
+          password: ${{ secrets.FTP_PASSWORD }}
+
+      - name: 🥤 Installing Vendor Packages
+        run: composer update --no-dev --no-scripts --optimize-autoloader
