--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -11,13 +11,11 @@ jobs:
     steps:
       - name: 🚚 Get latest code
         uses: actions/checkout@v3
-      
       - name: FTP Deploy to WP Engine (Staging)
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
-          server: ${{ vars.FTP_SERVER }}
-          username: ${{ vars.FTP_USERNAME}}
+          server: ${{ secrets.FTP_SERVER }}
+          username: ${{ secrets.FTP_USERNAME}}
           password: ${{ secrets.FTP_PASSWORD }}
-
       - name: 🥤 Installing Vendor Packages
         run: composer update --no-dev --no-scripts --optimize-autoloader
